# interest-rate-credit-impact

./: .gitignore  DOWNLOAD_DATA_GUIDE.md  HOW_TO_READ_CORRELATION_HEATMAP.md  KIRO_AI_VALUE_PROPOSITION.md  README.md  config.py  config_examples.md  download_data.py  main.py  pyproject.toml  requirements.txt  run_dashboard.py
.hypothesis/constants/: 104eb0ad0bd787a0  156be1f2ecfa77cc  17f40c1b99291e39  17fc1e14b4f9dcfa  21f4b6a39a470886  2319ef7aa008e940  3993a4ddef610f82  3a2cce2289af5351  503e9458998d2263  5208f36ce3a85b92  64805e570a70e36b  6b03fcc40cbc605a  7ed6e5ab9a680770  9fbf4c44789a2fb9  ad8309d94d84e1e0  ba40a1f26530a8cd  dda2bba25f21d81b  df94ff147f17c65e  e071f2f03a7a145e  e9093faeb53a4db2
.hypothesis/tmp/: tmp05ftn3ww  tmp1pmq2w8g  tmp81wr9qdu  tmpkk6qdfd4  tmpn45u9t5m  tmpo4bxgsmm  tmpsp8pjg3v
.kiro/specs/interest-rate-credit-analysis/: design.md  requirements.md  tasks.md
analysis/: __init__.py  eda_engine.py  forecast_engine.py  lag_analysis_engine.py  regression_engine.py  sensitivity_analyzer.py
dashboard/: __init__.py  dashboard_app.py  export_manager.py
data/: .gitkeep  README.md
data_processing/: __init__.py  loader.py  merger.py  validator.py
output/: .gitkeep
tests/: __init__.py  test_dashboard_app.py  test_eda_engine.py  test_eda_visualization_properties.py  test_export_manager.py  test_forecast_engine.py  test_lag_analysis_engine.py  test_main.py  test_merger_properties.py  test_run_dashboard.py  test_validator_properties.py
