[project]
name = "interest-rate-credit-analysis"
version = "0.1.0"
description = "Analysis system examining the relationship between federal interest rates and consumer credit trends"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",
    "plotly>=5.14.0",
    "dash>=2.9.0",
    "hypothesis>=6.70.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_processing", "analysis", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "venv/*", ".venv/*"]
